<resources>
    <string name="app_name">Group sms forwarder</string>
    <string name="important">Please read this before use!</string>
    <string name="info">Group sms forwarder uses your phones native groups and contacts. This gives you opportunity to administrate users through androids native contacts.</string>
    <string name="info_purpose">Purpose of this app is to take over android and turn it to message central.</string>
    <string name="info_dedicate">It is highly recommended to dedicate a separate phone to this app.</string>
    <string name="info_warning">WARNING: 1. This service may cost you money (sms prices), especially if receivers are from out of country, and you have turned feedback on. It is highly recommended to use this app with free sms phone. </string>
    <string name="info_usage">In order to use this app you have to:</string>
    <string name="info_usage_0"> - gsm and internet connection.</string>
    <string name="info_usage_1"> - register this phone to a google account - gives you option to administrate users and groups through gmail/google contacts.</string>
    <string name="info_usage_2"> - for backup of SMSs just install SMS Backup+ app - no further  actions needed.</string>
    <string name="info_usage_3"> - Sms functions (ignore ""): "Signup" Group name and your name, "Resign" Group name and your name, "Create Group" and group name to create a group, to send group message you have to write this: "Groupname" and your message afterwords. Example1: Signup GRP1 James Jackson, Example2: Resign GRP1 James, Example3: GRP1 Hello everybody! Best regards James Jackson  </string>
    <string name="action_settings">How To Info</string>
    <string name="title_activity_forwarder">ForwarderActivity</string>
    <string name="dummy_button">Sync Contacts Now</string>
    <string name="forwarding_on">Auto Forwarding is on</string>
    <string name="forwarding_off">Auto Forwarding is off. Turn forwarding on by pressing forwarder button. This will start SMS Forwarder up and will delete all messages after handling them</string>
    <string name="signup">Signup</string>
    <string name="resign">Resign</string>
    <string name="help_msg">In order to signup to a group write: Signup GroupName YourName. In order to resign write: Resign GroupName YourName. In order to send a group message write: GroupName message.</string>
    <string name="no_group">Sorry could not find a group with following name:&#160;</string>
    <string name="signup_sucress">You are now signed up to a following group:&#160;</string>
    <string name="resign_sucress">You are now resigned from following group:&#160;</string>
    <string name="already_signed">You already signed to following group:&#160;</string>
    <string name="ADMIN_NR">61770122</string>
    <string name="currentSMSs">Count of messages to handle:&#160;</string>
    <string name="forwardingIs">Forwarding is:&#160;</string>
    <string name="sendingMsg">Sending message from:&#160;</string>
    <string name="deletingIs">Deleting messages after treatment is:&#160;</string>
    <string name="respondUsersIs">Respond back to all messages is:&#160;</string>
    <string name="pref_title_respond_to_messages">Respond to Messages</string>
    <string name="pref_description_enable_response">This will activate feedback for all incoming SMSes</string>
    <string-array name="CountryCodes" >
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_enable_forwarding">Enable sms forwarding</string>
    <string name="pref_description_enable_forwarding">
        When sms forwarding is enabled, phone will listen for incoming sms messages and handle them.
    </string>
    <string name="pref_title_feedback_message">Edit Feedback message</string>
    <string name="pref_default_feedback_message">In order to signup to a group write: Signup GroupName YourName. In order to resign write: Resign GroupName YourName. In order to send a group message write: GroupName message.</string>
    <string name="pref_title_signup_message">Edit Signup message</string>
    <string name="pref_default_signup_message">You are now signed to following group:&#160;</string>
    <string name="pref_title_resign_message">Edit Resign message</string>
    <string name="pref_default_resign_message">You are now resigned from following group:&#160;</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_actions">Actions</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_feedback_to_messages">Answer to all messages</string>
    <string name="pref_title_ignore_foreign_numbers">Ignore Foreign Numbers</string>
    <string name="pref_description_ignore_foreign_numbers">This will ignore all incoming messages from foreign numbers</string>
    <string name="sent_from">Sent from:&#160;</string>
</resources>