<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="JustATest">

    <CheckBoxPreference
        android:key="enable_forwarding_checkbox"
        android:title="@string/pref_title_enable_forwarding"
        android:summary="@string/pref_description_enable_forwarding"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <CheckBoxPreference
        android:dependency="enable_forwarding_checkbox"
        android:key="enable_feedback_checkbox"
        android:title="@string/pref_title_feedback_to_messages"
        android:summary="@string/pref_description_enable_response"
        android:defaultValue="true" />
    <EditTextPreference
        android:dependency="enable_feedback_checkbox"
        android:key="feedback_text"
        android:title="@string/pref_title_feedback_message"
        android:defaultValue="@string/pref_default_feedback_message"
        android:selectAllOnFocus="true"
        android:inputType="textLongMessage"/>
    <EditTextPreference
        android:dependency="enable_forwarding_checkbox"
        android:key="signup_text"
        android:title="@string/pref_title_signup_message"
        android:defaultValue="@string/pref_default_signup_message"
        android:selectAllOnFocus="true"
        android:inputType="textLongMessage"/>
    <EditTextPreference
        android:dependency="enable_forwarding_checkbox"
        android:key="resign_text"
        android:title="@string/pref_title_resign_message"
        android:defaultValue="@string/pref_default_resign_message"
        android:selectAllOnFocus="true"
        android:inputType="textWebEditText"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
